Fix for issue 27 - JPA TCK - Start derby with a security policy